FEATURE  * Add use jwt middleware  * Add jwt to swagger FIX, REFACTOR  * Minor changes
